--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 <section>
   <h2>🎈 Confirmação de Presença (RSVP)</h2>
-  <form action="enviar.php" method="POST">
+  <form action="malito:valmir.pereira86@hotmail.com" method="POST">
     <label>Seu Nome:</label>
     <input type="text" name="nome" required />
 
@@ -222,7 +222,7 @@
 
 <section>
   <h2>📬 Deixe uma mensagem para a Esther e Davi</h2>
-  <form action="enviar.php" method="POST">
+  <form action="malito:valmir.pereira86@hotmail.com" method="POST">
     <label>Seu Nome:</label>
     <input type="text" name="nome" required />
 
