--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     }
 
     header {
-      background: #ff66cc url('img/bg-luluca.png') no-repeat center/cover;
+      background: #3F5EFB;
+background: radial-gradient(circle,rgba(63, 94, 251, 1) 33%, rgba(89, 91, 231, 1) 48%, rgba(252, 70, 107, 1) 89%);
       padding: 30px 15px;
       text-align: center;
       color: white;
