--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     body {
       font-family: 'Nunito', sans-serif;
-      background: linear-gradient(to right, #ffe6f0, #e0f7fa);
+     background: linear-gradient(to right, #da63c648, #5766bd75);
       margin: 0;
       padding: 0;
       color: #333;
