--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ background: radial-gradient(circle,rgba(63, 94, 251, 1) 33%, rgba(89, 91, 231, 1
 
     <section aria-labelledby="rsvp" tabindex="0">
       <h2 id="rsvp">🎈 Confirmação de Presença (RSVP)</h2>
-      <form id="rsvp-form" action="https://formsubmit.co/valmir.pereira86@hotmail.com" method="POST" novalidate>
+      <form id="rsvp-form" action="https://formsubmit.co/valmir.pereira86@hotmail.com" method="POST">
         <label for="nome-rsvp">Seu Nome:</label>
         <input type="text" id="nome-rsvp" name="nome" placeholder="Digite seu nome completo" required />
 
@@ -502,7 +502,7 @@ background: radial-gradient(circle,rgba(63, 94, 251, 1) 33%, rgba(89, 91, 231, 1
 
     <section aria-labelledby="mensagem-aniversariantes" tabindex="0">
       <h2 id="mensagem-aniversariantes">📬 Deixe uma mensagem para a Esther e Davi</h2>
-      <form action="https://formsubmit.co/valmir.pereira86@hotmail.com" method="POST" novalidate>
+      <form action="https://formsubmit.co/valmir.pereira86@hotmail.com" method="POST">
         <label for="nome-msg">Seu Nome:</label>
         <input type="text" id="nome-msg" name="nome" required />
 
