--- a/index.html
+++ b/index.html
@@ -469,7 +469,11 @@ background: radial-gradient(circle,rgba(63, 94, 251, 1) 33%, rgba(89, 91, 231, 1
           style="background-image:url('/ESTHER.png')" tabindex="0"></button>
       </div>
     </section>
-
+<div>
+  
+</div>
+<!-- Confirme sua Presença -->
+<h2 id="galeria-ambiente">🚀Confirme sua Presença </h2>
     <form id="form-rsvp">
       <label for="nome">Seu Nome:</label>
       <input type="text" id="nome" name="nome" required>
@@ -481,8 +485,6 @@ background: radial-gradient(circle,rgba(63, 94, 251, 1) 33%, rgba(89, 91, 231, 1
         <option value="Não">Não</option>
       </select>
     
-      <label for="mensagem">Mensagem (opcional):</label>
-      <textarea id="mensagem" name="mensagem" rows="4"></textarea>
     
       <button type="submit">Confirmar Presença</button>
     </form>
