--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@ background: radial-gradient(circle,rgba(63, 94, 251, 1) 33%, rgba(89, 91, 231, 1
         <option value="Não">Não</option>
       </select>
     
-      <label for="mensagem">Mensagem (opcional):</label>
-      <textarea id="mensagem" name="mensagem" rows="4"></textarea>
+      <label for="mensagem">Crianças (opcional):</label>
+      <textarea id="mensagem" name="mensagem" rows="4">Nome da criança e a idade.</textarea>
     
       <button type="submit">Confirmar Presença</button>
     </form>
