--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       </select>
 
       <label for="mensagem">Crianças (opcional):</label>
-      <textarea id="mensagem" name="mensagem" rows="4">Nome da criança e a idade.</textarea>
+      <textarea id="mensagem" name="mensagem" rows="4"></textarea>
 
       <button type="submit">Confirmar Presença</button>
     </form>
