--- a/index.html
+++ b/index.html
@@ -387,12 +387,12 @@ button1:hover .right {
 
     <button1 style="--content: 'Hover me!';" href="/">
       <div class="left"></div>
-      Confirmar presença até 10 de setembro.
+      Confirmar Presença até 10 de Setembro📅.
       <div class="right"></div>
     </button1>
     
 
-    <h2 id="info-evento">📅 Confirmação de presença</h2>
+    <h2 id="info-evento">📅 Confirmação de Presença</h2>
 
     <form id="form-rsvp">
       <label for="nome">Seu Nome:</label>
@@ -406,7 +406,7 @@ button1:hover .right {
       </select>
 
       <label for="mensagem">Crianças (opcional):</label>
-      <textarea id="mensagem" name="mensagem" rows="4">Nome da criança e a idade.</textarea>
+      <textarea id="mensagem" name="mensagem" rows="4"></textarea>
 
       <button type="submit">Confirmar Presença</button>
     </form>
