--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ button1:hover .right {
     </section>
 
     <section aria-labelledby="info-evento" tabindex="0">
-      <h2 id="info-evento">📅 Informações do Evento</h2>
+      <h2 id="info-evento">📅 Informações do Evento🎂</h2>
       <p><strong>Data:</strong> 20 de setembro de 2025</p>
       <p><strong>Hora:</strong> 13h às 17h</p>
       <p><strong>Local:</strong> Mig Fest buffet</p>
@@ -387,7 +387,7 @@ button1:hover .right {
 
     <button1 style="--content: 'Hover me!';" href="/">
       <div class="left"></div>
-      Confirmar Presença até 10 de Setembro📅.
+      Confirmar Presença até 10 de Setembro🥳.
       <div class="right"></div>
     </button1>
     
