--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ button1:hover .right {
 
     <button1 style="--content: 'Hover me!';" href="/">
       <div class="left"></div>
-      Confirmar Presença até 10 de Setembro🥳.
+      Confirmar Presença falta poucos dias 🥳.
       <div class="right"></div>
     </button1>
     
