--- a/galeria.html
+++ b/galeria.html
@@ -309,7 +309,7 @@
 <body>
 
     <header>
-        <h1>GALERIA</h1>
+        <h1>GALERIA "EM BREVE!"</h1>
         <button onclick="showAdminPanel()">ADMINISTRADOR</button>
     </header>
 
